src/az-cli/azure-vote/1.az-vote-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: azure-vote
spec:
  finalizers:
    - kubernetes
