src/az-cli/azure-vote/6a.az-vote-front-ing-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-vote-front-svc-ing-tls
  namespace: azure-vote
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://kv-use2-446692-s4-aksfdp.vault.azure.net/certificates/extended-star-ebdemos-info/13a681298d534ad28352e1de9893f613
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: azvote.ebdemos.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: azure-vote-front-svc-clusip
            port:
              number: 80
  tls:
  - hosts:
    - azvote.ebdemos.info
    secretName: keyvault-azure-vote-front-svc-ing-tls
