src/az-cli/azure-vote/6b.az-vote-front-ing-tls-agic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-vote-front-svc-ing-tls-agic
  namespace: azure-vote
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: azvote.ebdemos.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: azure-vote-front-svc-clusip
            port:
              number: 80
  tls:
  - hosts:
    - azvote.ebdemos.info
    secretName: keyvault-azure-vote-front-svc-ing-tls
